--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,6 +134,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
+    "import numpy as np\n",
     "\n",
     "# Study data files\n",
     "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "1893"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,51 +176,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duplicate Rows based on 2 columns are:\n",
-      "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
-      "909     g989     Propriva  Female          21          26          0   \n",
-      "911     g989     Propriva  Female          21          26          5   \n",
-      "913     g989     Propriva  Female          21          26         10   \n",
-      "915     g989     Propriva  Female          21          26         15   \n",
-      "917     g989     Propriva  Female          21          26         20   \n",
-      "\n",
-      "     Tumor Volume (mm3)  Metastatic Sites  \n",
-      "909           45.000000                 0  \n",
-      "911           47.570392                 0  \n",
-      "913           49.880528                 0  \n",
-      "915           53.442020                 0  \n",
-      "917           54.657650                 1  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>911</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47.570392</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>10</td>\n",
+       "      <td>49.880528</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>915</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>15</td>\n",
+       "      <td>53.442020</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>917</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>20</td>\n",
+       "      <td>54.657650</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "909     g989     Propriva  Female          21          26          0   \n",
+       "911     g989     Propriva  Female          21          26          5   \n",
+       "913     g989     Propriva  Female          21          26         10   \n",
+       "915     g989     Propriva  Female          21          26         15   \n",
+       "917     g989     Propriva  Female          21          26         20   \n",
+       "\n",
+       "     Tumor Volume (mm3)  Metastatic Sites  \n",
+       "909           45.000000                 0  \n",
+       "911           47.570392                 0  \n",
+       "913           49.880528                 0  \n",
+       "915           53.442020                 0  \n",
+       "917           54.657650                 1  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Getting the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
-    "# duplicate_mice = combined_mouse_data[combined_mouse_data.duplicated([\"Mouse ID\",\"Timepoint\"])]\n",
-    "# duplicate_mice\n",
-    "duplicate = combined_mouse_data[combined_mouse_data.duplicated([\"Mouse ID\",\"Timepoint\"])]\n",
-    "print(\"Duplicate Rows based on 2 columns are:\", duplicate, sep='\\n')"
+    "combined_mouse_data[combined_mouse_data.duplicated([\"Mouse ID\",\"Timepoint\"])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: Get all the data for the duplicate mouse ID. \n",
-    "\n"
+    "# Optional: Get all the data for the duplicate mouse ID. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -410,24 +498,36 @@
        "[1888 rows x 8 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
-    "drop_mice = combined_mouse_data.drop_duplicates([\"Mouse ID\", \"Timepoint\"])\n",
-    "drop_mice"
+    "clean_data = combined_mouse_data.drop_duplicates([\"Mouse ID\", \"Timepoint\"])\n",
+    "clean_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1888"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Checking the number of mice in the clean DataFrame.\n"
+    "# Checking the number of mice in the clean DataFrame.\n",
+    "len(clean_data[\"Mouse ID\"])"
    ]
   },
   {
@@ -439,14 +539,227 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Capomulin    230\n",
+       "Ramicane     228\n",
+       "Ketapril     188\n",
+       "Naftisol     186\n",
+       "Zoniferol    182\n",
+       "Placebo      181\n",
+       "Stelasyn     181\n",
+       "Ceftamin     178\n",
+       "Infubinol    178\n",
+       "Propriva     156\n",
+       "Name: Drug Regimen, dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#List of each regimen\n",
+    "clean_data[\"Drug Regimen\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "\n",
     "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
-    "\n"
+    "\n",
+    "\n",
+    "# create a new DataFrame object \n",
+    "statistics_data= {\n",
+    "\"Total Count\" : [male, female, non_gender_specific],\n",
+    "\"Percentage of Players\" : [male_percent, female_percent, non_gender_specific_percent]\n",
+    "}\n",
+    "\n",
+    "summary statistics = pd.DataFrame(statistics_data, columns = [\"Capomulin\",\"Ramicane\",\"Ketapril\",\"Naftisol\",\"Zoniferol\",\"Placebo\",\"Stelasyn\",\"Ceftamin\",\"Infubinol\",\"Propriva\"], index=[\"Mean\",\"Median\",\"Variance\",\"standard deviation\",\"SEM\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>23.343598</td>\n",
+       "      <td>48.158209</td>\n",
+       "      <td>9355.420462</td>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>4.994774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>68.923185</td>\n",
+       "      <td>9361.228582</td>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>6.268188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>36.321346</td>\n",
+       "      <td>72.226731</td>\n",
+       "      <td>9413.493529</td>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>6.567243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>78.567014</td>\n",
+       "      <td>10384.299876</td>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>53.698743</td>\n",
+       "      <td>8.279709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>76.668817</td>\n",
+       "      <td>10105.671026</td>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>52.509285</td>\n",
+       "      <td>8.134708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>73.212939</td>\n",
+       "      <td>9780.078122</td>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>7.821003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>72.455421</td>\n",
+       "      <td>8173.380288</td>\n",
+       "      <td>52.393463</td>\n",
+       "      <td>50.909965</td>\n",
+       "      <td>6.568014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>22.050126</td>\n",
+       "      <td>47.622816</td>\n",
+       "      <td>9169.417875</td>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>4.846308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>75.123690</td>\n",
+       "      <td>9816.199991</td>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>52.431737</td>\n",
+       "      <td>7.710419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>73.324432</td>\n",
+       "      <td>9689.044192</td>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>51.818479</td>\n",
+       "      <td>6.966589</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    min        max           sum       mean     median  \\\n",
+       "Drug Regimen                                                             \n",
+       "Capomulin     23.343598  48.158209   9355.420462  40.675741  41.557809   \n",
+       "Ceftamin      45.000000  68.923185   9361.228582  52.591172  51.776157   \n",
+       "Infubinol     36.321346  72.226731   9413.493529  52.884795  51.820584   \n",
+       "Ketapril      45.000000  78.567014  10384.299876  55.235638  53.698743   \n",
+       "Naftisol      45.000000  76.668817  10105.671026  54.331565  52.509285   \n",
+       "Placebo       45.000000  73.212939   9780.078122  54.033581  52.288934   \n",
+       "Propriva      45.000000  72.455421   8173.380288  52.393463  50.909965   \n",
+       "Ramicane      22.050126  47.622816   9169.417875  40.216745  40.673236   \n",
+       "Stelasyn      45.000000  75.123690   9816.199991  54.233149  52.431737   \n",
+       "Zoniferol     45.000000  73.324432   9689.044192  53.236507  51.818479   \n",
+       "\n",
+       "                   std  \n",
+       "Drug Regimen            \n",
+       "Capomulin     4.994774  \n",
+       "Ceftamin      6.268188  \n",
+       "Infubinol     6.567243  \n",
+       "Ketapril      8.279709  \n",
+       "Naftisol      8.134708  \n",
+       "Placebo       7.821003  \n",
+       "Propriva      6.568014  \n",
+       "Ramicane      4.846308  \n",
+       "Stelasyn      7.710419  \n",
+       "Zoniferol     6.966589  "
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].agg(['min', 'max', 'sum', 'mean', 'median', 'std' ])"
    ]
   },
   {
