--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -540,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -565,31 +567,12 @@
    ],
    "source": [
     "#List of each regimen\n",
-    "clean_data[\"Drug Regimen\"].value_counts()"
+    "#clean_data[\"Drug Regimen\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
-    "\n",
-    "\n",
-    "# create a new DataFrame object \n",
-    "statistics_data= {\n",
-    "\"Total Count\" : [male, female, non_gender_specific],\n",
-    "\"Percentage of Players\" : [male_percent, female_percent, non_gender_specific_percent]\n",
-    "}\n",
-    "\n",
-    "summary statistics = pd.DataFrame(statistics_data, columns = [\"Capomulin\",\"Ramicane\",\"Ketapril\",\"Naftisol\",\"Zoniferol\",\"Placebo\",\"Stelasyn\",\"Ceftamin\",\"Infubinol\",\"Propriva\"], index=[\"Mean\",\"Median\",\"Variance\",\"standard deviation\",\"SEM\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -613,16 +596,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>min</th>\n",
-       "      <th>max</th>\n",
-       "      <th>sum</th>\n",
        "      <th>mean</th>\n",
        "      <th>median</th>\n",
+       "      <th>var</th>\n",
        "      <th>std</th>\n",
+       "      <th>sem</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Drug Regimen</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -633,133 +614,113 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Capomulin</th>\n",
-       "      <td>23.343598</td>\n",
-       "      <td>48.158209</td>\n",
-       "      <td>9355.420462</td>\n",
        "      <td>40.675741</td>\n",
        "      <td>41.557809</td>\n",
+       "      <td>24.947764</td>\n",
        "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ceftamin</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>68.923185</td>\n",
-       "      <td>9361.228582</td>\n",
        "      <td>52.591172</td>\n",
        "      <td>51.776157</td>\n",
+       "      <td>39.290177</td>\n",
        "      <td>6.268188</td>\n",
+       "      <td>0.469821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Infubinol</th>\n",
-       "      <td>36.321346</td>\n",
-       "      <td>72.226731</td>\n",
-       "      <td>9413.493529</td>\n",
        "      <td>52.884795</td>\n",
        "      <td>51.820584</td>\n",
+       "      <td>43.128684</td>\n",
        "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ketapril</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>78.567014</td>\n",
-       "      <td>10384.299876</td>\n",
        "      <td>55.235638</td>\n",
        "      <td>53.698743</td>\n",
+       "      <td>68.553577</td>\n",
        "      <td>8.279709</td>\n",
+       "      <td>0.603860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Naftisol</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>76.668817</td>\n",
-       "      <td>10105.671026</td>\n",
        "      <td>54.331565</td>\n",
        "      <td>52.509285</td>\n",
+       "      <td>66.173479</td>\n",
        "      <td>8.134708</td>\n",
+       "      <td>0.596466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Placebo</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>73.212939</td>\n",
-       "      <td>9780.078122</td>\n",
        "      <td>54.033581</td>\n",
        "      <td>52.288934</td>\n",
+       "      <td>61.168083</td>\n",
        "      <td>7.821003</td>\n",
+       "      <td>0.581331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Propriva</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>72.455421</td>\n",
-       "      <td>8173.380288</td>\n",
        "      <td>52.393463</td>\n",
        "      <td>50.909965</td>\n",
+       "      <td>43.138803</td>\n",
        "      <td>6.568014</td>\n",
+       "      <td>0.525862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ramicane</th>\n",
-       "      <td>22.050126</td>\n",
-       "      <td>47.622816</td>\n",
-       "      <td>9169.417875</td>\n",
        "      <td>40.216745</td>\n",
        "      <td>40.673236</td>\n",
+       "      <td>23.486704</td>\n",
        "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Stelasyn</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>75.123690</td>\n",
-       "      <td>9816.199991</td>\n",
        "      <td>54.233149</td>\n",
        "      <td>52.431737</td>\n",
+       "      <td>59.450562</td>\n",
        "      <td>7.710419</td>\n",
+       "      <td>0.573111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Zoniferol</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>73.324432</td>\n",
-       "      <td>9689.044192</td>\n",
        "      <td>53.236507</td>\n",
        "      <td>51.818479</td>\n",
+       "      <td>48.533355</td>\n",
        "      <td>6.966589</td>\n",
+       "      <td>0.516398</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    min        max           sum       mean     median  \\\n",
-       "Drug Regimen                                                             \n",
-       "Capomulin     23.343598  48.158209   9355.420462  40.675741  41.557809   \n",
-       "Ceftamin      45.000000  68.923185   9361.228582  52.591172  51.776157   \n",
-       "Infubinol     36.321346  72.226731   9413.493529  52.884795  51.820584   \n",
-       "Ketapril      45.000000  78.567014  10384.299876  55.235638  53.698743   \n",
-       "Naftisol      45.000000  76.668817  10105.671026  54.331565  52.509285   \n",
-       "Placebo       45.000000  73.212939   9780.078122  54.033581  52.288934   \n",
-       "Propriva      45.000000  72.455421   8173.380288  52.393463  50.909965   \n",
-       "Ramicane      22.050126  47.622816   9169.417875  40.216745  40.673236   \n",
-       "Stelasyn      45.000000  75.123690   9816.199991  54.233149  52.431737   \n",
-       "Zoniferol     45.000000  73.324432   9689.044192  53.236507  51.818479   \n",
-       "\n",
-       "                   std  \n",
-       "Drug Regimen            \n",
-       "Capomulin     4.994774  \n",
-       "Ceftamin      6.268188  \n",
-       "Infubinol     6.567243  \n",
-       "Ketapril      8.279709  \n",
-       "Naftisol      8.134708  \n",
-       "Placebo       7.821003  \n",
-       "Propriva      6.568014  \n",
-       "Ramicane      4.846308  \n",
-       "Stelasyn      7.710419  \n",
-       "Zoniferol     6.966589  "
+       "                   mean     median        var       std       sem\n",
+       "Drug Regimen                                                     \n",
+       "Capomulin     40.675741  41.557809  24.947764  4.994774  0.329346\n",
+       "Ceftamin      52.591172  51.776157  39.290177  6.268188  0.469821\n",
+       "Infubinol     52.884795  51.820584  43.128684  6.567243  0.492236\n",
+       "Ketapril      55.235638  53.698743  68.553577  8.279709  0.603860\n",
+       "Naftisol      54.331565  52.509285  66.173479  8.134708  0.596466\n",
+       "Placebo       54.033581  52.288934  61.168083  7.821003  0.581331\n",
+       "Propriva      52.393463  50.909965  43.138803  6.568014  0.525862\n",
+       "Ramicane      40.216745  40.673236  23.486704  4.846308  0.320955\n",
+       "Stelasyn      54.233149  52.431737  59.450562  7.710419  0.573111\n",
+       "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].agg(['min', 'max', 'sum', 'mean', 'median', 'std' ])"
+    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
+    "\n",
+    "clean_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].agg(['mean', 'median', 'var','std','sem' ])"
    ]
   },
   {
