--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -960,6 +960,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age_months</th>\n",
        "      <th>Weight (g)</th>\n",
@@ -967,67 +968,62 @@
        "      <th>Tumor Volume (mm3)</th>\n",
        "      <th>Metastatic Sites</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Drug Regimen</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Ramicane</th>\n",
-       "      <td>k403</td>\n",
+       "      <th>309</th>\n",
+       "      <td>b128</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>9</td>\n",
+       "      <td>22</td>\n",
+       "      <td>45</td>\n",
+       "      <td>38.982878</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>b742</td>\n",
+       "      <td>Capomulin</td>\n",
        "      <td>Male</td>\n",
+       "      <td>7</td>\n",
        "      <td>21</td>\n",
-       "      <td>16</td>\n",
+       "      <td>45</td>\n",
+       "      <td>38.939633</td>\n",
        "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ramicane</th>\n",
-       "      <td>k403</td>\n",
+       "      <th>64</th>\n",
+       "      <td>f966</td>\n",
+       "      <td>Capomulin</td>\n",
        "      <td>Male</td>\n",
-       "      <td>21</td>\n",
        "      <td>16</td>\n",
-       "      <td>5</td>\n",
-       "      <td>38.825898</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ramicane</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>10</td>\n",
-       "      <td>35.014271</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ramicane</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>34.223992</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ramicane</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
+       "      <td>17</td>\n",
        "      <td>20</td>\n",
-       "      <td>32.997729</td>\n",
+       "      <td>30.485985</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>g288</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>45</td>\n",
+       "      <td>37.074024</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>g316</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40.159220</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1038,95 +1034,99 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Naftisol</th>\n",
-       "      <td>z969</td>\n",
+       "      <th>1434</th>\n",
+       "      <td>q633</td>\n",
+       "      <td>Zoniferol</td>\n",
        "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
+       "      <td>12</td>\n",
        "      <td>25</td>\n",
-       "      <td>63.145652</td>\n",
+       "      <td>45</td>\n",
+       "      <td>70.827796</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Naftisol</th>\n",
-       "      <td>z969</td>\n",
+       "      <th>1518</th>\n",
+       "      <td>s337</td>\n",
+       "      <td>Zoniferol</td>\n",
        "      <td>Male</td>\n",
-       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>27</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.109651</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1660</th>\n",
+       "      <td>w140</td>\n",
+       "      <td>Zoniferol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>19</td>\n",
        "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>65.841013</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47.717952</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1719</th>\n",
+       "      <td>w575</td>\n",
+       "      <td>Zoniferol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45</td>\n",
+       "      <td>68.401286</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Naftisol</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>35</td>\n",
-       "      <td>69.176246</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Naftisol</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>40</td>\n",
-       "      <td>70.314904</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Naftisol</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
+       "      <th>1777</th>\n",
+       "      <td>x613</td>\n",
+       "      <td>Zoniferol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>15</td>\n",
+       "      <td>48.077646</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1888 rows × 7 columns</p>\n",
+       "<p>249 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Mouse ID   Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "Drug Regimen                                                     \n",
-       "Ramicane         k403  Male          21          16          0   \n",
-       "Ramicane         k403  Male          21          16          5   \n",
-       "Ramicane         k403  Male          21          16         10   \n",
-       "Ramicane         k403  Male          21          16         15   \n",
-       "Ramicane         k403  Male          21          16         20   \n",
-       "...               ...   ...         ...         ...        ...   \n",
-       "Naftisol         z969  Male           9          30         25   \n",
-       "Naftisol         z969  Male           9          30         30   \n",
-       "Naftisol         z969  Male           9          30         35   \n",
-       "Naftisol         z969  Male           9          30         40   \n",
-       "Naftisol         z969  Male           9          30         45   \n",
+       "     Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "309      b128    Capomulin  Female           9          22         45   \n",
+       "299      b742    Capomulin    Male           7          21         45   \n",
+       "64       f966    Capomulin    Male          16          17         20   \n",
+       "244      g288    Capomulin    Male           3          19         45   \n",
+       "360      g316    Capomulin  Female          22          22         45   \n",
+       "...       ...          ...     ...         ...         ...        ...   \n",
+       "1434     q633    Zoniferol    Male          12          25         45   \n",
+       "1518     s337    Zoniferol    Male          14          27         45   \n",
+       "1660     w140    Zoniferol  Female          19          30          5   \n",
+       "1719     w575    Zoniferol  Female          16          28         45   \n",
+       "1777     x613    Zoniferol  Female           2          29         15   \n",
        "\n",
-       "              Tumor Volume (mm3)  Metastatic Sites  \n",
-       "Drug Regimen                                        \n",
-       "Ramicane               45.000000                 0  \n",
-       "Ramicane               38.825898                 0  \n",
-       "Ramicane               35.014271                 1  \n",
-       "Ramicane               34.223992                 1  \n",
-       "Ramicane               32.997729                 1  \n",
-       "...                          ...               ...  \n",
-       "Naftisol               63.145652                 2  \n",
-       "Naftisol               65.841013                 3  \n",
-       "Naftisol               69.176246                 4  \n",
-       "Naftisol               70.314904                 4  \n",
-       "Naftisol               73.867845                 4  \n",
+       "      Tumor Volume (mm3)  Metastatic Sites  \n",
+       "309            38.982878                 2  \n",
+       "299            38.939633                 0  \n",
+       "64             30.485985                 0  \n",
+       "244            37.074024                 1  \n",
+       "360            40.159220                 2  \n",
+       "...                  ...               ...  \n",
+       "1434           70.827796                 2  \n",
+       "1518           62.109651                 4  \n",
+       "1660           47.717952                 0  \n",
+       "1719           68.401286                 3  \n",
+       "1777           48.077646                 0  \n",
        "\n",
-       "[1888 rows x 7 columns]"
+       "[249 rows x 8 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,23 +1136,11 @@
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
     "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
-    "\n",
-    "\n",
     "# Merge this group df with the original dataframe to get the tumor volume at the last timepoint\n",
     "\n",
-    "# Set the index to Drug Regimen\n",
-    "index_regimen = clean_data.set_index(\"Drug Regimen\")\n",
-    "index_regimen\n",
-    "\n",
-    "columns = [\n",
-    "    \"Mouse ID\",\n",
-    "    \"Timepoint\",\n",
-    "    \"Tumor Volume (mm3)\",\n",
-    "]\n",
-    "\n",
-    "# Filter the data so that only those sightings in the US are in a DataFrame\n",
-    "filtered_data = clean_data.loc[clean_data[\"Timepoint\"] == \"us\", columns]\n",
-    "filtered_data.head()"
+    "#https://stackoverflow.com/questions/15705630/get-the-rows-which-have-the-max-count-in-groups-using-groupby\n",
+    "greatest_timepoint = clean_data.loc[clean_data.groupby([\"Drug Regimen\", \"Mouse ID\"])[\"Timepoint\"].idxmax()]\n",
+    "greatest_timepoint"
    ]
   },
   {
