--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -703,7 +703,7 @@
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
     "\n",
-    "clean_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].agg(['mean', 'median', 'var','std','sem' ])"
+    "clean_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].agg([\"mean\", \"median\", \"var\",\"std\",\"sem\" ])"
    ]
   },
   {
@@ -788,7 +788,7 @@
     "# Generate a bar plot showing the total number of mice for each treatment throughout the course of the study using pandas. \n",
     "\n",
     "# Use DataFrame.plot() in order to create a bar chart of the data\n",
-    "mice_and_treatment.plot(kind=\"bar\",color='b', figsize=(10,3))\n",
+    "mice_and_treatment.plot(kind=\"bar\",color=\"b\", figsize=(10,3))\n",
     "\n",
     "# Set a title for the chart\n",
     "plt.title(\"Total number of mice for each treatment\")\n",
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "Text(0, 0.5, 'Total number of mice')"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -837,7 +837,7 @@
     "\n",
     "# Create a list indicating where to write x labels and set figure size to adjust for space\n",
     "plt.figure(figsize=(10,3))\n",
-    "plt.bar(x_axis, indexed[\"Mouse ID\"], color='b', alpha=0.5, align=\"center\")\n",
+    "plt.bar(x_axis, indexed[\"Mouse ID\"], color=\"b\", alpha=0.5, align=\"center\")\n",
     "plt.xticks(tick_locations, indexed[\"Drug Regimen\"], rotation=\"vertical\")\n",
     "\n",
     "# Set a title and ylabel for the chart\n",
@@ -889,15 +889,15 @@
    "source": [
     "# Generate a pie plot showing the distribution of female versus male mice using pandas\n",
     "\n",
-    "pie_pandas = gender_group.plot.pie(y='Sex', figsize=(4, 4),autopct='%1.1f%%',startangle=120)\n",
+    "pie_pandas = gender_group.plot.pie(y=\"Sex\", figsize=(4, 4),autopct=\"%1.1f%%\",startangle=120)\n",
     "# plt.pie(gender_group,gender_group(\"Sex\"),autopct='%1.1f%%')\n",
-    "plt.title('Distribution of female versus male mice')\n",
+    "plt.title(\"Distribution of female versus male mice\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -919,8 +919,8 @@
     "\n",
     "gender = indexed_gender[\"Sex\"]\n",
     "percentage = indexed_gender[\"Mouse ID\"]\n",
-    "plt.pie(percentage,labels=gender,autopct='%1.1f%%',startangle=120)\n",
-    "plt.title('Distribution of female versus male mice')\n",
+    "plt.pie(percentage,labels=gender,autopct=\"%1.1f%%\",startangle=120)\n",
+    "plt.title(\"Distribution of female versus male mice\")\n",
     "plt.show()"
    ]
   },
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -1334,9 +1334,9 @@
     "# Generate a box plot of the final tumor volume of each mouse across four regimens of interest\n",
     "regimens_data = [capomulin_quartiles, ramicane_quartiles, infubinol_quartiles, ceftamin_quartiles]\n",
     "fig1, ax1 = plt.subplots()\n",
-    "ax1.set_xticklabels(['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin'])\n",
-    "ax1.set_title('Final Tumor Volume by Regimens')\n",
-    "ax1.set_ylabel('Tumor Volume')\n",
+    "ax1.set_xticklabels([\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"])\n",
+    "ax1.set_title(\"Final Tumor Volume by Regimens\")\n",
+    "ax1.set_ylabel(\"Tumor Volume\")\n",
     "ax1.boxplot(regimens_data)\n",
     "plt.show()"
    ]
